parser/src/snapshots/rustpython_parser__context__tests__ann_assign_name.snap
---
source: parser/src/context.rs
expression: parse_ast
---
[
    Attributed {
        range: 0..10,
        custom: (),
        node: AnnAssign(
            StmtAnnAssign {
                target: Attributed {
                    range: 0..1,
                    custom: (),
                    node: Name(
                        ExprName {
                            id: Identifier(
                                "x",
                            ),
                            ctx: Store,
                        },
                    ),
                },
                annotation: Attributed {
                    range: 3..6,
                    custom: (),
                    node: Name(
                        ExprName {
                            id: Identifier(
                                "int",
                            ),
                            ctx: Load,
                        },
                    ),
                },
                value: Some(
                    Attributed {
                        range: 9..10,
                        custom: (),
                        node: Constant(
                            ExprConstant {
                                value: Int(
                                    1,
                                ),
                                kind: None,
                            },
                        ),
                    },
                ),
                simple: Int(
                    1,
                ),
            },
        ),
    },
]
