parser/src/snapshots/rustpython_parser__context__tests__assign.snap
---
source: compiler/parser/src/context.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 1,
        },
        custom: (),
        node: Assign {
            targets: [
                Located {
                    location: Location {
                        row: 1,
                        column: 1,
                    },
                    custom: (),
                    node: Name {
                        id: "x",
                        ctx: Store,
                    },
                },
            ],
            value: Located {
                location: Location {
                    row: 1,
                    column: 5,
                },
                custom: (),
                node: Constant {
                    value: Int(
                        1,
                    ),
                    kind: None,
                },
            },
            type_comment: None,
        },
    },
]
