parser/src/snapshots/rustpython_parser__context__tests__assign_attribute.snap
---
source: parser/src/context.rs
expression: parse_ast
---
[
    Attributed {
        range: 0..15,
        custom: (),
        node: Assign(
            StmtAssign {
                targets: [
                    Attributed {
                        range: 0..3,
                        custom: (),
                        node: Attribute(
                            ExprAttribute {
                                value: Attributed {
                                    range: 0..1,
                                    custom: (),
                                    node: Name(
                                        ExprName {
                                            id: "x",
                                            ctx: Load,
                                        },
                                    ),
                                },
                                attr: "y",
                                ctx: Store,
                            },
                        ),
                    },
                ],
                value: Attributed {
                    range: 6..15,
                    custom: (),
                    node: Tuple(
                        ExprTuple {
                            elts: [
                                Attributed {
                                    range: 7..8,
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Int(
                                                1,
                                            ),
                                            kind: None,
                                        },
                                    ),
                                },
                                Attributed {
                                    range: 10..11,
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Int(
                                                2,
                                            ),
                                            kind: None,
                                        },
                                    ),
                                },
                                Attributed {
                                    range: 13..14,
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Int(
                                                3,
                                            ),
                                            kind: None,
                                        },
                                    ),
                                },
                            ],
                            ctx: Load,
                        },
                    ),
                },
                type_comment: None,
            },
        ),
    },
]
