parser/src/snapshots/rustpython_parser__context__tests__assign_for.snap
---
source: parser/src/context.rs
expression: parse_ast
---
[
    Located {
        range: 0..24,
        custom: (),
        node: For(
            StmtFor {
                target: Located {
                    range: 4..5,
                    custom: (),
                    node: Name(
                        ExprName {
                            id: "x",
                            ctx: Store,
                        },
                    ),
                },
                iter: Located {
                    range: 9..18,
                    custom: (),
                    node: Tuple(
                        ExprTuple {
                            elts: [
                                Located {
                                    range: 10..11,
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Int(
                                                1,
                                            ),
                                            kind: None,
                                        },
                                    ),
                                },
                                Located {
                                    range: 13..14,
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Int(
                                                2,
                                            ),
                                            kind: None,
                                        },
                                    ),
                                },
                                Located {
                                    range: 16..17,
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Int(
                                                3,
                                            ),
                                            kind: None,
                                        },
                                    ),
                                },
                            ],
                            ctx: Load,
                        },
                    ),
                },
                body: [
                    Located {
                        range: 20..24,
                        custom: (),
                        node: Pass,
                    },
                ],
                orelse: [],
                type_comment: None,
            },
        ),
    },
]
