parser/src/snapshots/rustpython_parser__context__tests__assign_list.snap
---
source: parser/src/context.rs
expression: parse_ast
---
[
    Attributed {
        range: 0..18,
        custom: (),
        node: Assign(
            StmtAssign {
                targets: [
                    Attributed {
                        range: 0..6,
                        custom: (),
                        node: List(
                            ExprList {
                                elts: [
                                    Attributed {
                                        range: 1..2,
                                        custom: (),
                                        node: Name(
                                            ExprName {
                                                id: Identifier(
                                                    "x",
                                                ),
                                                ctx: Store,
                                            },
                                        ),
                                    },
                                    Attributed {
                                        range: 4..5,
                                        custom: (),
                                        node: Name(
                                            ExprName {
                                                id: Identifier(
                                                    "y",
                                                ),
                                                ctx: Store,
                                            },
                                        ),
                                    },
                                ],
                                ctx: Store,
                            },
                        ),
                    },
                ],
                value: Attributed {
                    range: 9..18,
                    custom: (),
                    node: Tuple(
                        ExprTuple {
                            elts: [
                                Attributed {
                                    range: 10..11,
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Int(
                                                1,
                                            ),
                                            kind: None,
                                        },
                                    ),
                                },
                                Attributed {
                                    range: 13..14,
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Int(
                                                2,
                                            ),
                                            kind: None,
                                        },
                                    ),
                                },
                                Attributed {
                                    range: 16..17,
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Int(
                                                3,
                                            ),
                                            kind: None,
                                        },
                                    ),
                                },
                            ],
                            ctx: Load,
                        },
                    ),
                },
                type_comment: None,
            },
        ),
    },
]
