parser/src/snapshots/rustpython_parser__context__tests__assign_name.snap
---
source: parser/src/context.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 1,
                column: 13,
            },
        ),
        custom: (),
        node: Assign(
            StmtAssign {
                targets: [
                    Located {
                        location: Location {
                            row: 1,
                            column: 0,
                        },
                        end_location: Some(
                            Location {
                                row: 1,
                                column: 1,
                            },
                        ),
                        custom: (),
                        node: Name(
                            ExprName {
                                id: "x",
                                ctx: Store,
                            },
                        ),
                    },
                ],
                value: Located {
                    location: Location {
                        row: 1,
                        column: 4,
                    },
                    end_location: Some(
                        Location {
                            row: 1,
                            column: 13,
                        },
                    ),
                    custom: (),
                    node: Tuple(
                        ExprTuple {
                            elts: [
                                Located {
                                    location: Location {
                                        row: 1,
                                        column: 5,
                                    },
                                    end_location: Some(
                                        Location {
                                            row: 1,
                                            column: 6,
                                        },
                                    ),
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Int(
                                                1,
                                            ),
                                            kind: None,
                                        },
                                    ),
                                },
                                Located {
                                    location: Location {
                                        row: 1,
                                        column: 8,
                                    },
                                    end_location: Some(
                                        Location {
                                            row: 1,
                                            column: 9,
                                        },
                                    ),
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Int(
                                                2,
                                            ),
                                            kind: None,
                                        },
                                    ),
                                },
                                Located {
                                    location: Location {
                                        row: 1,
                                        column: 11,
                                    },
                                    end_location: Some(
                                        Location {
                                            row: 1,
                                            column: 12,
                                        },
                                    ),
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Int(
                                                3,
                                            ),
                                            kind: None,
                                        },
                                    ),
                                },
                            ],
                            ctx: Load,
                        },
                    ),
                },
                type_comment: None,
            },
        ),
    },
]
