parser/src/snapshots/rustpython_parser__context__tests__assign_named_expr.snap
---
source: parser/src/context.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 1,
                column: 14,
            },
        ),
        custom: (),
        node: If(
            StmtIf {
                test: Located {
                    location: Location {
                        row: 1,
                        column: 3,
                    },
                    end_location: Some(
                        Location {
                            row: 1,
                            column: 8,
                        },
                    ),
                    custom: (),
                    node: NamedExpr(
                        ExprNamedExpr {
                            target: Located {
                                location: Location {
                                    row: 1,
                                    column: 3,
                                },
                                end_location: Some(
                                    Location {
                                        row: 1,
                                        column: 4,
                                    },
                                ),
                                custom: (),
                                node: Name(
                                    ExprName {
                                        id: "x",
                                        ctx: Store,
                                    },
                                ),
                            },
                            value: Located {
                                location: Location {
                                    row: 1,
                                    column: 7,
                                },
                                end_location: Some(
                                    Location {
                                        row: 1,
                                        column: 8,
                                    },
                                ),
                                custom: (),
                                node: Constant(
                                    ExprConstant {
                                        value: Int(
                                            1,
                                        ),
                                        kind: None,
                                    },
                                ),
                            },
                        },
                    ),
                },
                body: [
                    Located {
                        location: Location {
                            row: 1,
                            column: 10,
                        },
                        end_location: Some(
                            Location {
                                row: 1,
                                column: 14,
                            },
                        ),
                        custom: (),
                        node: Pass,
                    },
                ],
                orelse: [],
            },
        ),
    },
]
