parser/src/snapshots/rustpython_parser__context__tests__assign_set_comp.snap
---
source: parser/src/context.rs
expression: parse_ast
---
[
    Attributed {
        range: 0..26,
        custom: (),
        node: Assign(
            StmtAssign {
                targets: [
                    Attributed {
                        range: 0..1,
                        custom: (),
                        node: Name(
                            ExprName {
                                id: Identifier(
                                    "x",
                                ),
                                ctx: Store,
                            },
                        ),
                    },
                ],
                value: Attributed {
                    range: 4..26,
                    custom: (),
                    node: SetComp(
                        ExprSetComp {
                            elt: Attributed {
                                range: 5..6,
                                custom: (),
                                node: Name(
                                    ExprName {
                                        id: Identifier(
                                            "y",
                                        ),
                                        ctx: Load,
                                    },
                                ),
                            },
                            generators: [
                                Comprehension {
                                    target: Attributed {
                                        range: 11..12,
                                        custom: (),
                                        node: Name(
                                            ExprName {
                                                id: Identifier(
                                                    "y",
                                                ),
                                                ctx: Store,
                                            },
                                        ),
                                    },
                                    iter: Attributed {
                                        range: 16..25,
                                        custom: (),
                                        node: Tuple(
                                            ExprTuple {
                                                elts: [
                                                    Attributed {
                                                        range: 17..18,
                                                        custom: (),
                                                        node: Constant(
                                                            ExprConstant {
                                                                value: Int(
                                                                    1,
                                                                ),
                                                                kind: None,
                                                            },
                                                        ),
                                                    },
                                                    Attributed {
                                                        range: 20..21,
                                                        custom: (),
                                                        node: Constant(
                                                            ExprConstant {
                                                                value: Int(
                                                                    2,
                                                                ),
                                                                kind: None,
                                                            },
                                                        ),
                                                    },
                                                    Attributed {
                                                        range: 23..24,
                                                        custom: (),
                                                        node: Constant(
                                                            ExprConstant {
                                                                value: Int(
                                                                    3,
                                                                ),
                                                                kind: None,
                                                            },
                                                        ),
                                                    },
                                                ],
                                                ctx: Load,
                                            },
                                        ),
                                    },
                                    ifs: [],
                                    is_async: Int(
                                        0,
                                    ),
                                },
                            ],
                        },
                    ),
                },
                type_comment: None,
            },
        ),
    },
]
